<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ViewDetailsFragment">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/viewDetailsName"
        android:gravity="center"
        android:textColor="@color/accentColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/ageTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/accentColor"
        android:gravity="center"
        android:text="@string/viewDetailsAge"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/colorTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/accentColor"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/viewDetailsFavColor"
        app:layout_constraintTop_toBottomOf="@id/ageTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/accentColor"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/viewDetailsGender"
        app:layout_constraintTop_toBottomOf="@id/colorTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
